--- a/angular.json
+++ b/angular.json
@@ -27,13 +27,17 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
+            
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
